# IndiDS18B20TemperatureSensor

./: CMakeLists.txt  DS18B20TemperatureSensor.cpp  DS18B20TemperatureSensor.h  README.md  indi_ds18b20_temperature_sensor.xml  indi_ds18b20_temperature_sensor.xml.cmake
